# TuringAdvancedProgramming19A

./: .gitignore  .swp  README.md  README.zh.md
Task 0/: README.md  README.zh.md
Task 0/2018202143黄浩睿/: README
Task 0/2019201408陈志朋/: README  hello.c
Task 0/2019201409/: hello  hello.c
Task 0/2019201409于倬浩/: README.md  hello.c
Task 0/2019201410/: hello
Task 0/2019201410刘洁松/: hello.c
Task 0/2019201411何东楠/: hello.c
Task 0/2019201412/: hello
Task 0/2019201412向尔格/: hello.c
Task 0/2019201414唐熙霖/: README.md  hello.c
Task 0/2019201416刘书玮/: ajiab.c
Task 0/2019201417王子恒/: README  hello.c
Task 0/2019201418舒文桐/: README
Task 0/2019201419王成瑞/: hello
Task 0/2019201420汪元森/: TvT.c
Task 0/2019201422李林豇/: hello.c
Task 1/: README.md  README.zh.md  my.c  mydouble.c
Task 1/2019201407农钧翔/: my_double_fpdqwq.c
Task 1/2019201408陈志朋/: double.c
Task 1/2019201409/: checker  chek  data  data.cpp  data.in  fast.c  run.sh  yzh-ieee754  yzh-ieee754.c
Task 1/2019201409于倬浩/: README.md  double-checker  expandable-version.c  extened-version.c  main.c  test.sh
Task 1/2019201410刘洁松/: main.c
Task 1/2019201411何东楠/: my_double.c
Task 1/2019201412向尔格/: dzy.c
Task 1/double-checker/src/: Arguments.cc  Arguments.h  CMakeLists.txt  Utility.h  main.cc
Task 2/: README.md  README.zh.md  a.c  a.out  input  test.c
Task 3/: README.md  README.zh.md  test.out
Task 4/: README.md  README.zh.md
Task 5/: README.md  README.zh.md
Task 6/: README.md  README.zh.md
Task 7/: README.md  README.zh.md
Task 8/: README.md  README.zh.md
Task 8/ref/: Makefile  (+4 more)
task#/: huffman.c
(+659 files in other folders)
